build/html2rdf/tests/snapshots/test_cases__cases@rdfa1.1__html5__0010.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0010.html
---
@base <file:///0010.html> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
<http://example.org/people#Person1> foaf:knows <http://example.org/people#Person2> .
<http://example.org/people#Person2> foaf:knows <http://example.org/people#Person1> .
