build/html2rdf/tests/snapshots/test_cases__cases@rdfa1.1__html5__0017.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0017.html
---
@base <file:///0017.html> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
_:ac4ba54ded438c61 foaf:knows _:f23c6944799d7b03 ;
	foaf:name "Manu Sporny" .
_:f23c6944799d7b03 foaf:name "Ralph Swick" .
